--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+@theme {
+  --font-sans: Inter, system-ui, sans-serif; 
+}
+
+:root {
+	font-family: Inter, sans-serif;
+	font-feature-settings: 'liga' 1, 'calt' 1;
+	color: white;
+}
+
+@supports (font-variation-settings: normal) {
+  :root { font-family: InterVariable, sans-serif; }
+}
